# sipmanalyze

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
data/: README.md  halign.root  picoblock_laser_20190521.root  waveform_example.root
docs/: condor.md
example/: condor_lxplus.jdl  condor_lxplus.sh  condor_lxplus_example.py
notebooks/: afterpulse.ipynb  low_light_response.ipynb  luminosity_alignment.ipynb  waveform_inspect.ipynb
scripts/: README.md
scripts/convert/: lowlight_txt_to_root.py  lumi_txt_to_root.py  waveform_txt_to_root.py
src/sipmanalyze/: __init__.py  estimate.py  fit.py  plotting.py
src/sipmanalyze/condor/: __init__.py  lpc.py
src/sipmanalyze/estimate/: __init__.py  lowlight.py
src/sipmanalyze/formats/: __init__.py  histogram_output.py  standard.py  waveform.py
src/sipmanalyze/pdf/: __init__.py  functions.py
