[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sipmanalyze"
authors = [
    {name = "Yi-Mu Chen", email = "yimuchen@umd.edu"},
]
description = "SiPM analysis package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "mplhep",
    "matplotlib",
    "scipy",
]
dynamic = ["version"]

### The following is for the construction of the package using hatchling
[tool.hatch.version]
source = "vcs"
path = "src/sipmanalyze/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/sipmanalyze/version.py"

[tool.setuptools_scm]
write_to = "src/sipmanalyze/_version.py"